# Project-Management-API

./: Cargo.toml  LICENSE  README.md
JSON/: project.json
src/: lib.rs
src/config/: json_read_write.rs  mod.rs  owner_data.rs  project_data.rs
src/handler/: graphql_handler.rs
src/schema/: mod.rs  owner_schema.rs  project_schema.rs
tests/: integration_graphql_mutation.rs  integration_graphql_query_test.rs  integration_json_test.rs  integration_owner_test.rs  integration_project_test.rs
tests/JSON_Test/: owner_test.json
