[package]
name = "project_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
async-graphql = { version = "7.0.0", features = ["bson", "chrono"] }
async-graphql-rocket = "7.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.6.1", features = ["v4"] }
redis = "0.25.4"